<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="SandBot Settings"
        />
    <EditTextPreference
        android:defaultValue="@string/pref_server_default"
        android:inputType="number|numberDecimal"
        android:key="@string/pref_server_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_server_title"
        android:summary="@string/pref_server_summary"/>

    <EditTextPreference
        android:defaultValue="@string/pref_diameter_default"
        android:inputType="number|numberSigned"
        android:key="@string/pref_diameter_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_diameter_title"
        android:summary="@string/pref_diameter_summary" />
</PreferenceScreen>
